--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,7 @@
-
-/* Your CSS Code here. */
+.holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
